--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,10 +26,10 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
+  /* --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-mono: var(--font-geist-mono); */
   /* --color-blue-text: var(--blue-text);
   --color-gradient-0: var(--gradient-0);
   --color-gradient-14: var(--gradient-14);
@@ -54,7 +54,7 @@
     )
     `; */
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -66,7 +66,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
 /* 
 .bg-custom-gradient {
   background: linear-gradient(
